fix menu on mobile

--- a/css/contact.css
+++ b/css/contact.css
@@ -4,7 +4,7 @@
     grid-template-columns: 1fr;
     gap:1rem;
     padding: 0.5rem;
-    height: ;
+    
 }
 .description{
     opacity: 0;
